######## 2016-01-31 ########
alter table flashsale_cushops_detail add column modified datetime NOT NULL;

update flashsale_cushops_detail set modified=now() where id != 0;

alter table flashsale_district add column created datetime NOT NULL;
alter table flashsale_district add column modified datetime NOT NULL;

update flashsale_district set created=now(),modified=now() where id != 0;

alter table flashsale_productdetail add column created datetime NOT NULL;
alter table flashsale_productdetail add column modified datetime NOT NULL;

update flashsale_productdetail set created=now(),modified=now() where product_id != 0;

alter table flashsale_trade_charge add column created datetime NOT NULL;
alter table flashsale_trade_charge add column modified datetime NOT NULL;

update flashsale_trade_charge set created=time_paid,modified=time_paid where id != 0;
######## 2016-01-22 ########
alter table supplychain_supply_schedule_manage_detail add column pic_rating double precision default NULL;
######## 2016-01-22 ########
alter table flashsale_productdetail add column rebeta_scheme_id int(11) default 0 NOT NULL;
######## 2016-01-12 ########
alter table supplychain_supply_product add column librarian varchar(32) default null ;
alter table supplychain_supply_product add column buyer varchar(32) default null ;
######## 2016-01-04 ########
alter table shop_items_product add column is_watermark tinyint(1) default 0;

############2015-12-26#####################
alter table flashsale_trade add `extras_info` varchar(256) NOT NULL DEFAULT '{}';

alter table supplychain_supply_supplier add column supplier_type int(11) default 0;
alter table supplychain_supply_supplier add column supplier_zone int(11) default 0;
CREATE INDEX `supplychain_supply_supplier_787383db` ON `supplychain_supply_supplier` (`supplier_zone`);
############2015-12-19#####################
alter table flashsale_customshare add column share_type varchar(8) not null;
############2015-12-17#####################