@@ -5,10 +5,18 @@ from django.conf import settings
 
 from .options import get_user_unionid
 
+
 OPENID_RE = re.compile('^[a-zA-Z0-9-_]{28}$')
 
 class WeixinAuthMixin(object):
-
+    
+    _wxpubid = settings.WEIXIN_APPID
+    _wxpubsecret = settings.WEIXIN_SECRET
+    
+    def set_appid_and_secret(self,appid,appsecret):
+        self._wxpubid = appid
+        self._wxpubsecret = appsecret
+        
     def valid_openid(self, openid):
         if not openid:
             return False
@@ -20,14 +28,14 @@ class WeixinAuthMixin(object):
         code    = request.GET.get('code')
         return get_user_unionid(
             code,
-            appid=settings.WEIXIN_APPID,
-            secret=settings.WEIXIN_SECRET,
+            appid=self._wxpubid,
+            secret=self._wxpubsecret,
             request=request
         )
     
     def get_wxauth_redirct_url(self,request):
         absolute_url = request.build_absolute_uri().split('#')[0]
-        params = {'appid':settings.WEIXIN_APPID,
+        params = {'appid':self._wxpubid,
                   'redirect_uri':absolute_url,
                   'response_type':'code',
                   'scope':'snsapi_base',
