@@ -11,7 +11,7 @@ from .models import Customer,Register
 from .options import get_user_unionid
 from .tasks import task_Update_Sale_Customer
 from shopapp.weixin.views import valid_openid
-from shopapp.weixin.models import WeiXinUser
+from shopapp.weixin.models import WeiXinUser,WeixinUnionID
 
 import logging
 logger = logging.getLogger('django.request')
@@ -71,7 +71,13 @@ class WeixinPubBackend(RemoteUserBackend):
     create_unknown_user = True
     upports_inactive_user = False
     supports_object_permissions = False
-
+    
+    def get_unoinid(self, openid, appkey):
+        try:
+            return WeixinUnionID.objects.get(openid=openid,app_key=appkey).unionid
+        except WeixinUnionID.DoesNotExist:
+            return ''
+        
     def authenticate(self, request, **kwargs):
         
         content = request.REQUEST
@@ -83,13 +89,17 @@ class WeixinPubBackend(RemoteUserBackend):
         code = content.get('code')
         openid,unionid = get_user_unionid(code,appid=settings.WXPAY_APPID,
                                           secret=settings.WXPAY_SECRET,request=request)
-        if openid.upper() == 'omt59udpleo8-db1pmhp35sdqkyu':
-            logger.error('debug backend:%s,%s'%(openid,unionid))
+
+        if openid and not unionid:
+            logger.warn('weixin unionid not return:openid=%s'%openid)
+            unionid = self.get_unoinid(unionid,settings.WXPAY_APPID)
+        
         if not valid_openid(openid) or not valid_openid(unionid):
             return AnonymousUser()
-        
+            
         try:
             profile = Customer.objects.get(unionid=unionid,status=Customer.NORMAL)
+            
             #如果openid有误，则重新更新openid
             if profile.openid != openid:
                 task_Update_Sale_Customer.s(unionid,openid=openid,app_key=settings.WXPAY_APPID)()
