@@ -1,3 +1,7 @@
+######## 2016-02-03 ########
+alter table shop_weixin_unionid add column modified datetime NOT NULL;
+
+update shop_weixin_unionid set modified=created where id != 0;
 ######## 2016-01-31 ########
 alter table flashsale_cushops_detail add column modified datetime NOT NULL;
 
